force-app/main/default/objects/iManageAPIs__mdt/iManageAPIs__mdt.object-meta.xml
<CustomObject>
    <label>iManageAPIs</label>
    <pluralLabel>iManageAPIs</pluralLabel>
</CustomObject>