force-app/main/default/objects/iManageAPIs__mdt/fields/boundarykey__c.field-meta.xml
<CustomField>
    <fullName>boundarykey__c</fullName>
    <label>boundarykey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>