force-app/main/default/objects/iManageAPIs__mdt/fields/createdFolderId__c.field-meta.xml
<CustomField>
    <fullName>createdFolderId__c</fullName>
    <label>createdFolderId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>