force-app/main/default/objects/iManageAPIs__mdt/fields/customers__c.field-meta.xml
<CustomField>
    <fullName>customers__c</fullName>
    <label>customers</label>
    <length>255</length>
    <type>Text</type>
</CustomField>