force-app/main/default/objects/iManageAPIs__mdt/fields/DataUrl__c.field-meta.xml
<CustomField>
    <fullName>DataUrl__c</fullName>
    <label>DataUrl</label>
    <length>255</length>
    <type>Text</type>
</CustomField>