force-app/main/default/objects/iManageAPIs__mdt/fields/libraries__c.field-meta.xml
<CustomField>
    <fullName>libraries__c</fullName>
    <label>libraries</label>
    <length>255</length>
    <type>Text</type>
</CustomField>