force-app/main/default/objects/iManageAPIs__mdt/fields/workspaces__c.field-meta.xml
<CustomField>
    <fullName>workspaces__c</fullName>
    <label>workspaces</label>
    <length>255</length>
    <type>Text</type>
</CustomField>