force-app/main/default/objects/iManageAPIs__mdt/fields/WorkspacesName__c.field-meta.xml
<CustomField>
    <fullName>WorkspacesName__c</fullName>
    <label>WorkspacesName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>